force-app/main/default/objects/clariti__RefundItem__c/clariti__RefundItem__c.object-meta.xml
<CustomObject>
    <description>Refund Item is used to track refunds against individual payment allocations.</description>
    <label>Refund Item</label>
    <nameField>
        <displayFormat>RFITEM-{MM}{DD}{YYYY}-{000}</displayFormat>
        <label>Refund Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>