force-app/main/default/objects/clariti__RefundItem__c/fields/clariti__PaymentAllocation__c.field-meta.xml
<CustomField>
    <fullName>clariti__PaymentAllocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Allocation</label>
    <referenceTo>clariti__PaymentAllocation__c</referenceTo>
    <relationshipLabel>Refund Items</relationshipLabel>
    <relationshipName>RefundItems</relationshipName>
    <type>Lookup</type>
</CustomField>