force-app/main/default/objects/clariti__RefundItem__c/fields/clariti__Refund__c.field-meta.xml
<CustomField>
    <fullName>clariti__Refund__c</fullName>
    <label>Refund</label>
    <referenceTo>clariti__Refund__c</referenceTo>
    <relationshipLabel>Refund Items</relationshipLabel>
    <relationshipName>RefundItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>